[package]
name = "rust-media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
axum = "0.7"
bytes = "1.5"
dashmap = "5.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.13"
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
